# TaimiHUD

./: .gitignore  :w  Cargo.toml  README.md  README.norg  ci.nix  default.nix  flake.nix  package.nix  shaders.hlsl  shell.nix
.github/workflows/: cargo.yml  taimiHUD.yml
i18n/en/: taimi_hud.ftl
models/: cat.entitydesc  cat.objdesc  horse.entitydesc
shaders/: debug.hlsl  debug.shaderdesc  generic.hlsl  generic.shaderdesc  textured.hlsl  textured.shaderdesc  trail.hlsl  trail.shaderdesc
src/: bhtimer.rs  controller.rs  geometry.rs  lib.rs  renderstate.rs  settings.rs  taimistate.rs  timermachine.rs  types.rs  util.rs  xnacolour.rs
src/exports/: arcdps.rs  mod.rs  nexus.rs  runtime.rs
src/marker/: atomic.rs  format.rs  mod.rs
src/render/: config_tab.rs  data_source_tab.rs  edit_marker_window.rs  event_loop.rs  goggles.rs  info_tab.rs  marker_tab.rs  marker_window.rs  mod.rs  pathing_window.rs  primary_window.rs  rule.yml  space.rs  state.rs  timer_tab.rs  timer_window.rs
src/render/space/: depthhandler.rs  ecs.rs  engine.rs  entity.rs  entitycontroller.rs  entitydescription.rs  instancebuffer.rs  mod.rs  model.rs  perspectivehandler.rs  perspectiveinputdata.rs  primitivetopology.rs  shader.rs  state.rs  texture.rs  vertexbuffer.rs
src/render/space/dx11/: backend.rs  instance_buffer_data.rs  mod.rs  perspective_input_data.rs  vertex_buffer.rs
src/render/space/object/: backing.rs  description.rs  loader.rs  mod.rs  render.rs
src/render/space/resources/: mod.rs  model.rs  texture.rs
src/render/space/resources/obj_format/: loader.rs  material.rs  model.rs
src/render/space/shader/: description.rs  loader.rs  mod.rs  pair.rs  pixel.rs  vertex.rs
src/resources/: mod.rs  model.rs  texture.rs  vertex.rs
src/resources/obj_format/: loader.rs  material.rs  mod.rs
src/resources/shader/: description.rs  pixel.rs
src/settings/: github.rs  mod.rs  needs_update.rs  progress_bar_config.rs  settings.rs  settings_struct.rs  sources.rs
src/settings/attempt/: config.rs  state.rs
src/settings/source/: github.rs  mod.rs
src/settings/v1/: mod.rs  remote_state.rs  timer.rs
src/space/: engine.rs  goggles.rs  mod.rs  render_list.rs
src/space/dx11/: backend.rs  blending_handler.rs  depth_handler.rs  instance_buffer.rs  mod.rs  perspective_handler.rs  perspective_input_data.rs
src/space/object/: backing.rs  description.rs  loader.rs  mod.rs  render.rs
src/space/pack/: attributes.rs  category.rs  loader.rs  mod.rs  poi.rs  trail.rs
src/space/resources/: mod.rs  model.rs  texture.rs
src/space/resources/obj_format/: loader.rs  material.rs
src/space/resources/shader/: description.rs  loader.rs  vertex.rs
src/timer/: action.rs  alert.rs  blishcolour.rs  direction.rs  file.rs  geometry.rs  marker.rs  mod.rs  phase.rs  state_machine.rs  timeraction.rs  timeralert.rs  timerfile.rs  timermarker.rs  timerphase.rs  timertrigger.rs  trigger.rs
