[package]
name = "taimi_hud"
authors = [ "kittywitch" ]
description = "Timers for RaidcoreGG Nexus"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
built = { version = "0.7.7", features = [ "chrono", "git2" ] }

[dependencies]
anyhow = "1.0.95"
log = "0.4.21"
nexus = { git = "https://github.com/zerthox/nexus-rs", features = ["log", "log_filter", "mumble", "arc", "extras"] }
tokio = { version = "1.43.0", features = [ "full" ] }
arcdps = { git = "https://github.com/zerthox/arcdps-rs", tag = "0.15.1" }
glam = { version = "0.30.0", features = [ "serde", "mint" ] }
palette = { version = "0.7.6", features = [ "serde" ] }
serde = { version = "1.0", features = ["derive", "rc"] }
glob = "0.3.2"
serde_json = "1.0.140"
serde_jsonrc = { version = "0.1.0", features = [ "preserve_order"] }
serde_with = "3.12.0"
json-strip-comments = "1.0.4"
strum = "0.27.1"
strum_macros = "0.27.1"
octocrab = "0.44.0"
reqwest = { version = "0.12.15", features = [ "stream" ] }
tempfile = "3.19.1"
bytes = "1.10.1"
async-compression = { version = "0.4.22", features = [ "tokio", "gzip" ] }
async-tar = "0.5.0"
tokio-tar = "0.3.1"
tokio-stream = "0.1.17"
tokio-util = "0.7.14"
futures-core = "0.3.31"
futures = "0.3.31"
chrono = { version = "0.4.40", features = [ "serde", "alloc" ] }
indexmap = "2.9.0"
relative-path = { version = "1.9.3", features = [ "serde" ] }
bitflags = "2.9.0"
windows = { version = "0.60.0", features = ["Win32_Graphics_Direct3D11", "Win32_Graphics_Dxgi", "Win32_Graphics_Dxgi_Common", "System", "Win32_Graphics_Direct3D_Fxc", "Win32_Graphics_Hlsl", "Win32_System_Diagnostics_Debug"] }
windows-strings = "0.3.1"
windows-core = "0.60.1"
mint = "0.5.9"
tobj = { version = "4.0.3", features = [ "merging", "reordering" ] }
itertools = "0.14.0"
rand = "0.9.1"

[lib]
crate-type = ["cdylib"] # nexus addons are dynamic system libraries (dll)
